<resources>
    <string name="app_name">DaangnMarket</string>
    <string name="loading">로딩중입니다.</string>
    <string name="network_error">네트워크 연결이 원활하지 않습니다.</string>
    <string name="default_profile_url">https://firebasestorage.googleapis.com/v0/b/daangnmarket.appspot.com/o/KakaoTalk_20200229_131135281.png?alt=media&amp;token=53283669-8b6a-40e1-9af1-c71893e1a9e0</string>

    <!-- 하단네비게이션 -->
    <string name="btmnav_menu1">홈</string>
    <string name="btmnav_menu2">카테고리</string>
    <string name="btmnav_menu3">글쓰기</string>
    <string name="btmnav_menu4">채팅</string>
    <string name="btmnav_menu5">나의 당근</string>

    <!-- 툴바 -->
    <string name="actionbar_title_home">홈</string>
    <string name="actionbar_title_category">카테고리</string>
    <string name="actionbar_title_chat">채팅</string>
    <string name="actionbar_title_my">나의 당근</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- StartActivity -->
    <string name="start_string1">우리동네 중고 직거래</string>
    <string name="start_string2">당근마켓은 동네 직거래 마켓이에요.\n내 동네를 설정하고 시작해보세요!</string>
    <string name="start_btn_string">내 동네 설정하고 시작하기</string>

    <!-- 로그인 액티비티 -->
    <string name="loginToolBarTitle">로그인/회원가입</string>
    <string name="loginText">당근마켓은 휴대폰 번호로\n가입해요.번호는 안전하게\n보관되며 어디에도 공개되지\n않아요.</string>
    <string name="phoneNumberHint">휴대폰 번호를 입력해주세요</string>
    <string name="phoneCertHint">인증번호를 입력해주세요</string>
    <string name="getCertText">인증문자 받기</string>
    <string name="getCertTextRetry">인증문자 다시 받기</string>
    <string name="loginButtonText">동의하고 시작하기</string>

    <!-- 로케이션 액티비티 -->
    <string name="location_search_edit_text_hint">내 동네 이름(동,읍,면)으로 검색</string>
    <string name="location_button_text">현재 위치로 찾기</string>
    <string name="location_cur_text">근처동네</string>
    <string name="loction_search_text">검색결과</string>

    <!-- 팝업윈도우 -->
    <string name="popup_string1">가입하고</string>
    <string name="popup_string2">\n중고 상품을 구경하세요!</string>
    <string name="popup_button_string1">지금 바로 구경하기</string>
    <string name="popup_button_string2">로그인하기</string>

    <!-- 나의 당근 fragment -->
    <string name="see_profile">프로필 보기</string>
    <string name="app_setting">앱 설정</string>
    <string name="my_login">로그인하기</string>

    <!-- 설정 -->
    <string name="app_setting_toolbar_title">설정</string>
    <string name="logout">로그아웃</string>

    <!-- ProductActivity -->
    <string name="manner">매너온도</string>
    <string name="bottom_chat_button_text">채팅으로 거래하기</string>
    <string name="report_text">이 게시글 신고하기</string>
    <string name="users_another_product">님의 판매 상품</string>
    <string name="users_another_product_see_all">모두보기</string>
    <string name="comment">댓글</string>

    <!-- 커스텀다이얼로그 Click Write -->
    <string name="secondhand_trade_string1">중고거래</string>
    <string name="secondhand_trade_string2">중고 물건을 판매할 수 있어요</string>
    <string name="community_promotion_string1">동네홍보</string>
    <string name="community_promotion_string2">업체소개, 부동산, 농수산물 등을 올릴 수 있어요</string>

    <!-- upload product -->
    <string name="upload_product_toolbar_title">중고거래 글쓰기</string>
    <string name="upload_product_title_hint">제목</string>
    <string name="upload_product_price_hint">가격 (선택사항)</string>
    <string name="upload_product_text_hint">게시글 내용을 작성해주세요.\n가품 및 판매금지품목은 게시가 제한될 수 있어요</string>
    <string name="upload_product_category">카테고리</string>

    <!-- anotherall -->
    <string name="another_all_toolbar_title">판매 상품보기</string>
    <string name="tab_all">전체</string>
    <string name="tab_selling">판매중</string>
    <string name="tab_sell_complete">거래완료</string>

    <!-- 신고하기 -->
    <string name="report_toolbar_title">게시글 신고</string>
    <string name="product_report_string">게시글 신고하기</string>
    <string name="user_report_string">을 신고하기</string>

    <!-- join -->
    <string name="join_toolbar_title">프로필 설정</string>
    <string name="nickname">닉네임</string>

    <!-- MainActovoty -->
    <string name="login_dialog">회원가입 또는 로그인후 이용할 수 있습니다.</string>
</resources>
