<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_item1"
        android:icon="@drawable/home"
        android:title="@string/btmnav_menu1"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/menu_item2"
        android:icon="@drawable/category"
        android:title="@string/btmnav_menu2"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/menu_item3"
        android:icon="@drawable/write"
        android:title="@string/btmnav_menu3"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/menu_item4"
        android:icon="@drawable/chat"
        android:title="@string/btmnav_menu4"
        app:showAsAction="always|withText"/>
    <item
        android:id="@+id/menu_item5"
        android:icon="@drawable/my"
        android:title="@string/btmnav_menu5"
        app:showAsAction="always|withText"/>
</menu>