<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".src.login.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:title="@string/loginToolBarTitle"
        app:titleTextColor="@color/black"
        android:theme="@style/BlackWhiteToolBar"></androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginTop="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:src="@drawable/login_img"></ImageView>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:maxLines="4"
                android:textStyle="bold"
                android:textSize="18dp"
                android:textColor="@color/black"
                android:gravity="center_vertical"
                android:text="@string/loginText"></TextView>

        </RelativeLayout>

    </LinearLayout>

    <EditText
        android:id="@+id/login_et_phone_number"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/phoneNumberHint"
        android:paddingLeft="20dp"
        android:textSize="20dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        android:inputType="phone"></EditText>

    <Button
        android:id="@+id/login_btn_get_cert"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/getCertText"
        android:onClick="customOnClick"></Button>
    <EditText
        android:id="@+id/login_et_cert"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:hint="@string/phoneCertHint"
        android:paddingLeft="20dp"
        android:textSize="20dp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:inputType="number"></EditText>

    <Button
        android:id="@+id/login_btn_start"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:text="@string/loginButtonText"
        android:onClick="customOnClick"></Button>


</LinearLayout>