<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/custom_dialog_click_write_secondhand_trade_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/secondhand_trade_icon"
                android:scaleType="fitXY"></ImageView>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:text="@string/secondhand_trade_string1"
                    android:textStyle="bold"
                    android:textSize="18dp"></TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/item_comment_chat_heart"
                    android:text="@string/secondhand_trade_string2"
                    android:textSize="15dp"></TextView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_dialog_click_write_community_promotion_layout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="80dp"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerInParent="true"
                android:src="@drawable/community_promotion_icon"
                android:scaleType="fitXY"></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_centerVertical="true">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:text="@string/community_promotion_string1"
                    android:textStyle="bold"
                    android:textSize="18dp"></TextView>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:textColor="@color/item_comment_chat_heart"
                    android:text="@string/community_promotion_string2"
                    android:textSize="15dp"></TextView>
            </LinearLayout>
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>